--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,8 @@ Revision history for Perl module Math::MPFR
     Required some amendments to MPFR.xs, and some rewriting of parts of some
     test scripts.
     Issue raised by https://rt.cpan.org/Ticket/Display.html?id=168076 .
+  - Add _PREC_MIN() to Prec/Prec.xs. This allows MPFR.pm to set the constant
+    MPFR_PREC_MIN to the appropriate value.
 
 4.43
   - More changes to t/_Float16.t and t/bfloat16.t needed to address what 4.42
