--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 Revision history for Perl module Math::MPFR
 
 4.45
+  - Fix typo in MPFR.xs - s/WE_HAVE_BENDIAN/MPFR_HAVE_BENDIAN/g
+    "WE_HAVE_BENDIAN' is and was never defined in Math::MPFR.
 
 4.44
   - Add subnormalize_float32, subnormalize_float16 and subnormalize_bfloat16.
