--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@ Revision history for Perl module Math::MPFR
 
 4.45
   - Fix typo in MPFR.xs - s/WE_HAVE_BENDIAN/MPFR_HAVE_BENDIAN/g
-    "WE_HAVE_BENDIAN' is and was never defined in Math::MPFR.
+    See https://github.com/sisyphus/math-mpfr/issues/11. Thanks @gregoa.
 
 4.44
   - Add subnormalize_float32, subnormalize_float16 and subnormalize_bfloat16.
